--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nextui-org/navbar": "^2.2.5",
     "@nextui-org/react": "^2.6.8",
     "@splinetool/react-spline": "^4.0.0",
+    "axios": "^1.11.0",
     "cancer-detect": "file:",
     "framer-motion": "^11.14.4",
     "react": "^18.3.1",
